# sheaf-consistency-enforcer

./: .gitignore  README.md  mcp_config.json  pyproject.toml
src/sheaf_enforcer/: __init__.py  admm.py  server.py  state.py
