[project]
name = "sheaf-consistency-enforcer"
version = "0.1.0"
description = "Sheaf Laplacian consistency enforcer for Kernel 1 persistence across MCP tool layers"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
sheaf-enforcer = "sheaf_enforcer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheaf_enforcer"]
